--- a/package.json
+++ b/package.json
@@ -14,12 +14,12 @@
     "@radix-ui/react-collapsible": "^1.1.0",
     "@radix-ui/react-icons": "^1.3.0",
     "@radix-ui/themes": "^3.1.3",
-    "@tanstack/react-query": "5.51.23",
-    "@trpc/client": "^10.45.2",
-    "@trpc/next": "^10.45.2",
+    "@tanstack/react-query": "^5.51.24",
+    "@trpc/client": "^11.0.0-rc.482",
+    "@trpc/next": "^11.0.0-rc.482",
     "@trpc/react": "^9.27.4",
-    "@trpc/react-query": "^10.45.2",
-    "@trpc/server": "^10.45.2",
+    "@trpc/react-query": "^11.0.0-rc.482",
+    "@trpc/server": "^11.0.0-rc.482",
     "autoprefixer": "^10.4.20",
     "clsx": "^2.1.1",
     "next": "14.2.5",
